--- a/2025/05/27-1.md
+++ b/2025/05/27-1.md
@@ -6,7 +6,7 @@
 
 번역 기능을 위한 언어 설정 컨텍스트 코드를 작성하던 중, 다음과 같은 에러가 발생했다.
 
-```tsx
+```tsx[원문 보기](https://occipital-latency-3e8.notion.site/201413a1ee8180b290bcc0c00ea0fa61?pvs=4)
 Fast refresh only works when a file only exports components.
 Use a new file to share constants or functions between components.
 eslint(react-refresh/only-export-components)
